# CheckLoginCLI

./: .gitignore  Cargo.toml  README.md  build.rs  check_output.txt  config.json  err.txt
scratch/: check_list2.rs
src/: account.rs  adb.rs  auto_nph.rs  config.rs  ldplayer.rs  main.rs  state.rs  tasks.rs  template.rs  types.rs  utils.rs
